--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "start" : "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +16,11 @@
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
-    "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
   }
 }
