--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "eslint": "^8.12.0",
-    "typescript": "^4.6.3"
+    "eslint": "^8.12.0"
   }
 }
